--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-   <!-- <script type="text/javascript">
+   <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
@@ -45,7 +45,7 @@
           );
         }
       }(window.location))
-    </script>-->
+    </script>
     <title>Eolito Wind Engineering Student Team</title>
   </head>
   <body>
